fix(reveal card): move card shadow to reveal card itself
Shadow from `nb-card` was cut off since it's container `nb-reveal-card`
has `overflow: hidden`.

--- a/src/framework/theme/components/card/reveal-card/reveal-card.component.scss
+++ b/src/framework/theme/components/card/reveal-card/reveal-card.component.scss
@@ -38,6 +38,14 @@
     }
   }
 
+  ::ng-deep {
+    nb-card-front nb-card,
+    nb-card-back nb-card {
+      box-shadow: none;
+      margin: 0;
+    }
+  }
+
   .reveal-button {
     cursor: pointer;
     position: absolute;
